--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h1 class="text-[3rem]">Dive Into My Career Story!</h1>
           </div>
           <div class="md:w-1/2">
-            <p>Vivamus lacinia lacus vel neque egestas, vitae volutpat purus dapibus. Nullam nec ultricies erat. Etiam ac urna metus. Sed cursus libero id ullamcorper interdum. Donec non urna et erat vehicula porttitor. Vivamus a sagittis dolor. Nulla facilisi. Cras euismod orci at felis cursus, vel vulputate sapien suscipit.</p>
+            <p>Take a closer look at the journey that shaped who I am today. From the pivotal moments that sparked my passion to the challenges that fueled my growth, this section walks you through the experiences, achievements, and turning points that define my professional path. Whether you're here to get inspired, connect, or simply learn more — welcome to my story.</p>
             <div class="p-2 hover:bg-gray-200 hover:text-black cursor-pointer mt-1 w-1/3 md:w-1/6 flex justify-center items-center rounded-full bg-red-800 text-white">
               <a href="#hitme">Hit me!</a>
             </div>
@@ -548,9 +548,6 @@
         </div>
       </div>
     </footer>
-
-   
-
     <script src="./script/animation.js"></script>
   </body>
 </html>
