--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet"> 
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KP10PN8T96"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KP10PN8T96');
+    </script>
   </head>
   <body class="base-text max-w-[1920px]" style="margin: 0 auto;">
     <!-- <nav class="md:text-[1rem] text-[0.8rem] px-[20px] md:px-[80px] text-red-800 z-10 fixed w-full bg-transparent flex justify-between">
@@ -548,6 +557,7 @@
         </div>
       </div>
     </footer>
+
     <script src="./script/animation.js"></script>
   </body>
 </html>
